--- a/chinh-sach-bao-mat/index.html
+++ b/chinh-sach-bao-mat/index.html
@@ -564,7 +564,7 @@ img.emoji {
 <style id="custom-background-css">body.custom-background { background-color: #fcfcfc; }</style>
 	</head>
 
-<body class="privacy-policy page-template-default page page-id-3 custom-background wp-embed-responsive theme-storefront woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active">
+<body class="privacy-policy page-template-default page page-id-3 custom-background wp-embed-responsive theme-storefront woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active elementor-default elementor-kit-159">
 
 
 
