--- a/tai-khoan/index.html
+++ b/tai-khoan/index.html
@@ -565,7 +565,7 @@ img.emoji {
 <style id="custom-background-css">body.custom-background { background-color: #fcfcfc; }</style>
 	</head>
 
-<body class="page-template-default page page-id-110 custom-background wp-embed-responsive theme-storefront woocommerce-account woocommerce-page woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active">
+<body class="page-template-default page page-id-110 custom-background wp-embed-responsive theme-storefront woocommerce-account woocommerce-page woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active elementor-default elementor-kit-159">
 
 
 
