--- a/gio-hang/index.html
+++ b/gio-hang/index.html
@@ -565,7 +565,7 @@ img.emoji {
 <style id="custom-background-css">body.custom-background { background-color: #fcfcfc; }</style>
 	</head>
 
-<body class="page-template-default page page-id-108 custom-background wp-embed-responsive theme-storefront woocommerce-cart woocommerce-page woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active">
+<body class="page-template-default page page-id-108 custom-background wp-embed-responsive theme-storefront woocommerce-cart woocommerce-page woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active elementor-default elementor-kit-159">
 
 
 
