--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ img.emoji {
 <style id="custom-background-css">body.custom-background { background-color: #fcfcfc; }</style>
 	</head>
 
-<body class="home page-template-default page page-id-58 custom-background wp-embed-responsive theme-storefront woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active">
+<body class="home page-template-default page page-id-58 custom-background wp-embed-responsive theme-storefront woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active elementor-default elementor-kit-159">
 
 
 
