--- a/khong-phan-loai/chao-moi-nguoi/index.html
+++ b/khong-phan-loai/chao-moi-nguoi/index.html
@@ -564,7 +564,7 @@ img.emoji {
 <style id="custom-background-css">body.custom-background { background-color: #fcfcfc; }</style>
 	</head>
 
-<body class="post-template-default single single-post postid-1 single-format-standard custom-background wp-embed-responsive theme-storefront woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active">
+<body class="post-template-default single single-post postid-1 single-format-standard custom-background wp-embed-responsive theme-storefront woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active elementor-default elementor-kit-159">
 
 
 
@@ -710,7 +710,7 @@ Avatar của người bình luận sử dụng <a href="https://gravatar.com/">G
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="7952add01e"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="1"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="99"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 	
