--- a/top-nhung-danh-lam-thang-canh-cua-viet-nam/top-10-danh-lam-thang-canh-viet-nam-noi-tieng-the-gioi/index.html
+++ b/top-nhung-danh-lam-thang-canh-cua-viet-nam/top-10-danh-lam-thang-canh-viet-nam-noi-tieng-the-gioi/index.html
@@ -564,7 +564,7 @@ img.emoji {
 <style id="custom-background-css">body.custom-background { background-color: #fcfcfc; }</style>
 	</head>
 
-<body class="post-template-default single single-post postid-33 single-format-standard custom-background wp-embed-responsive theme-storefront woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active">
+<body class="post-template-default single single-post postid-33 single-format-standard custom-background wp-embed-responsive theme-storefront woocommerce-no-js storefront-align-wide right-sidebar woocommerce-active elementor-default elementor-kit-159">
 
 
 
@@ -859,7 +859,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="10f47b2da4"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="75"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="231"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 	
